Changed Alphanso to Kesari and did some formatting

--- a/Fruits.html
+++ b/Fruits.html
@@ -1,9 +1,7 @@
 <ul>
 <li>Apple</li>
-<li> Alphanso Mango</li>
+<li> Kesari Mango</li>
 <li> Banana</li>
-
 <li> Grapes</li>
 <li> Kiwi </li>
-
 </ul>
